--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-tensorflow
 numpy
 matplotlib
 pandas
 seaborn
 scikit-learn
-keras
 streamlit
 matplotlib
 scikit-learn
+Keras==2.4.3
+tensorflow==2.3.1
